apps/base/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
  - protocol: UDP
    port: 53
    targetPort: 53
    name: dns-udp
  - protocol: TCP
    port: 53
    name: dns-tcp
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
spec:
  selector:
    app: adguard
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
